having some issues aligning content in the header

--- a/src/about/about.css
+++ b/src/about/about.css
@@ -19,6 +19,7 @@ li{
 }
 img{
     width: 100%;
+    max-width: 500px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 border-radius: 4px;
 }
@@ -66,7 +67,7 @@ line-height: 24px;
 
 
 }
-.about-skills li{
+.about-skills p{
     font-family: 'Inter';
 font-style: normal;
 font-weight: 400;
